--- a/Ecommerce.Presentation/Ecommerce.Presentation.csproj
+++ b/Ecommerce.Presentation/Ecommerce.Presentation.csproj
@@ -9,5 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Ecommerce.Service.Abstraction\Ecommerce.Service.Abstraction.csproj" />
   </ItemGroup>
-
+  <ItemGroup>
+	  <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
 </Project>
