ImageUrl Resolver Dn

--- a/Ecommerce.Api/appsettings.json
+++ b/Ecommerce.Api/appsettings.json
@@ -9,5 +9,8 @@
 
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=StoreDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "URLs": {
+    "BaseUrl": "https://localhost:7131/"
   }
 }
